# stringbuilder

./: CMakeLists.txt  README.md
cmake/: StringBuilderConfig.cmake.in
include/: stringbuilder.h
src/: stringbuilder.c
